--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "gapi-script": "^1.2.0",
+    "material-ui-confirm": "^3.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
@@ -25,6 +26,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^2.1.3",
+    "react-split-pane": "^0.1.92",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
