--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.4.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
