--- a/client/package.json
+++ b/client/package.json
@@ -32,9 +32,9 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "env-cmd -f .env.development react-scripts start",
-    "build:development": "env-cmd -f .env.development react-scripts build",
-    "build:production": "env-cmd -f .env.production react-scripts build",
+    "start": "env-cmd -f ./.env.development react-scripts start",
+    "build:development": "env-cmd -f ./.env.development react-scripts build",
+    "build:production": "env-cmd -f ./.env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
